--- a/src/app/login/login.css
+++ b/src/app/login/login.css
@@ -18,9 +18,18 @@ label {
 .btn-primary {
     background-color: #4fb05e;
     border-color: #4fb05e;
-    float: right;
 }
 
 .vasa-narrative-title {
     color: #4fb05e;
+}
+.fullscreen-center {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+:host ::ng-deep .main-content {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
 }
